--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,17 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+
+        <ion-title padding center text-center>Somiplantas</ion-title>
+
+  <ion-list>
+    <ion-item>
+      <ion-input placeholder="Usuario"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input placeholder="Contarseña" type="password"></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <ion-button color="success" expand="block">Login</ion-button>
+  <ion-button color="warning" expand="block">¿Aun no tienes cuenta? Registro</ion-button>
 </ion-content>
