Inicio la app movil

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,6 +12,6 @@
     </ion-item>
   </ion-list>
 
-  <ion-button color="success" expand="block">Login</ion-button>
+  <ion-button color="success" expand="block" (click)="userGenerate()" >Login</ion-button>
   <ion-button color="warning" expand="block">¿Aun no tienes cuenta? Registro</ion-button>
 </ion-content>
