--- a/src/app/Components/tabsbar/tabsbar.page.html
+++ b/src/app/Components/tabsbar/tabsbar.page.html
@@ -12,7 +12,7 @@
       <ion-icon name="md-cart"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="settings">
+    <ion-tab-button [routerLink]="['/articulos']" tab="settings">
       <ion-label>Articulos</ion-label>
       <ion-icon name="md-basket"></ion-icon>
     </ion-tab-button>
