--- a/src/app/Components/tabsbar/tabsbar.page.html
+++ b/src/app/Components/tabsbar/tabsbar.page.html
@@ -17,7 +17,7 @@
       <ion-icon name="md-basket"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="settings">
+    <ion-tab-button tab="settings" [routerLink]="['/clientes']">
       <ion-label>Usuarios</ion-label>
       <ion-icon name="md-contact"></ion-icon>
     </ion-tab-button>
