--- a/src/app/Components/articulo/articulo.page.html
+++ b/src/app/Components/articulo/articulo.page.html
@@ -9,6 +9,10 @@
         <img [src]="_sanitizer.bypassSecurityTrustResourceUrl(articulo.imagen)">
       </ion-avatar>
       <ion-item>
+        <ion-label id="profile_image" color="primary" stacked>Imagen</ion-label>
+        <ion-input type="file" accept="image/*" (change)="handleFileSelect($event)"></ion-input>
+      </ion-item>
+      <ion-item>
           <ion-label position="floating">Nombre articulo</ion-label>
           <ion-input [(ngModel)]="articulo.nombre"></ion-input>
         </ion-item>
