--- a/src/app/Components/tabsbar/tabsbar.page.html
+++ b/src/app/Components/tabsbar/tabsbar.page.html
@@ -7,17 +7,17 @@
       <ion-badge>6</ion-badge>
     </ion-tab-button>
 
-    <ion-tab-button tab="settings">
+    <ion-tab-button tab="pedidos">
       <ion-label>Pedidos</ion-label>
       <ion-icon name="md-cart"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button [routerLink]="['/articulos']" tab="settings">
+    <ion-tab-button [routerLink]="['/articulos']" >
       <ion-label>Articulos</ion-label>
       <ion-icon name="md-basket"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="settings" [routerLink]="['/clientes']">
+    <ion-tab-button  [routerLink]="['/clientes']">
       <ion-label>Usuarios</ion-label>
       <ion-icon name="md-contact"></ion-icon>
     </ion-tab-button>
