--- a/src/app/Components/pedido/pedido.page.html
+++ b/src/app/Components/pedido/pedido.page.html
@@ -5,5 +5,53 @@
 </ion-header>
 
 <ion-content>
+  <div class="card">
+    <div class="card-body">
+        <h1>Modificacion pedido</h1>
+        <p>Codigo pedido: {{Pedido.codpedido}}</p>
+        <p>Fecha: {{Pedido.fecha}}</p>
+        <p>Cliente: {{Pedido.cliente.nombre}} {{Pedido.cliente.apellido}}</p>
+        <div class="card">
+            <div class="card-body">
+              <h2>Articulos</h2>
+
+              <div class="form-group">
+                <label for="comment">Descripción:</label>
+                <textarea class="form-control" [(ngModel)]="Pedido.descripcion" rows="5" id="descripcion"></textarea>
+              </div>
+
+              <div class="row mt-2" *ngFor="let item of listaEspecificaciones; let i = index" (change)="UpdateTotal()">
+              
+                <label for="" class="mr-2 ml-2 mt-1"> Item {{i + 1}}</label>
+              <input disabled [(ngModel)]="listaEspecificaciones[i].id.art.nombre" style="max-width: 15%" class="form-control" type="text">
+              <label for="" class="mr-2 ml-2 mt-1"> Cantidad :</label>
+              <input [(ngModel)]="listaEspecificaciones[i].cantidad" min="0" max="50" aria-valuemin="0" style="max-width: 15%" class="form-control ml-2" type="number">
+              <label for="" class="mr-2 ml-2 mt-1"> Total :</label>
+              <input disabled [(ngModel)]="listaEspecificaciones[i].precio" style="max-width: 15%" class="form-control ml-2" type="text">
+              </div>
+
+            </div>
+          </div>
+          <div class="input-group mt-3 col-6" >
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="inputGroupSelect01">Estado</label>
+            </div>
+            <select [(ngModel)]="Pedido.estado.id" class="custom-select" id="inputGroupSelect01">
+              <option value="1">Nuevo pedido</option>
+              <option value="2">En proceso</option>
+              <option value="3">Listo para envio</option>
+              <option value="4">En envio</option>
+              <option value="5">Finalizado</option>
+              <option value="6">Cancelado</option>
+              <option value="7">En modificacion</option>
+              
+            </select>
+          </div>
+          
+          <p style="float: right">Total : {{Pedido.total}}</p>
+          <button class="mt-5 btn btn-secondary ml-2" (click)="confirm()" style="float: right" >Guardar</button>
+          <button class="mt-5 btn btn-secondary" [routerLink]="['/pedidos']" routerLinkActive="router-link-active"  style="float: right">Cancelar</button>
+    </div>
+  </div>
 
 </ion-content>
