--- a/src/app/Components/home/home.page.html
+++ b/src/app/Components/home/home.page.html
@@ -5,13 +5,13 @@
 
   <ion-list>
     <ion-item>
-      <ion-input placeholder="Usuario"></ion-input>
+      <ion-input [(ngModel)]="user" placeholder="Usuario"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input placeholder="Contarseña" type="password"></ion-input>
+      <ion-input [(ngModel)]="password" placeholder="Contarseña" type="password"></ion-input>
     </ion-item>
   </ion-list>
 
-  <ion-button color="success" expand="block" (click)="userGenerate()" >Login</ion-button>
+  <ion-button color="success" expand="block" (click)="Login()" >Login</ion-button>
   <ion-button color="warning" expand="block">¿Aun no tienes cuenta? Registro</ion-button>
 </ion-content>
