--- a/src/app/Components/tabsbar/tabsbar.page.html
+++ b/src/app/Components/tabsbar/tabsbar.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
 
-    <ion-tab-button tab="home">
+    <ion-tab-button tab="inicio">
       <ion-label>Inicio</ion-label>
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
