--- a/src/app/Components/home/home.page.scss
+++ b/src/app/Components/home/home.page.scss
@@ -1,4 +1,4 @@
-ion-title{
-    margin-top: 30vh;
-    margin-bottom: 2%;
-}
+// ion-title{
+//     margin-top: 30vh;
+//     margin-bottom: 2%;
+// }
