--- a/src/app/Components/home/home.page.html
+++ b/src/app/Components/home/home.page.html
@@ -1,5 +1,5 @@
 
-        <ion-title text-center>Somiplantas</ion-title>
+        <h1 text-center>Somiplantas</h1>
         <ion-img style="width: 60%; margin: auto" src="/assets/flor-inicio.png"></ion-img>
   <ion-list>
     <ion-item>
