--- a/src/app/Components/inicio/inicio.page.html
+++ b/src/app/Components/inicio/inicio.page.html
@@ -16,7 +16,7 @@
         <ion-card-content>
           <ion-text color="warning">
             <ion-button href="google.es"><h4 style="text-align: center
-              ">Hay 20 pedidos pendientes</h4></ion-button>
+              ">Hay {{cont}} pedidos pendientes</h4></ion-button>
           </ion-text>
           <ion-text color="info">
             <p style="text-align: left
