--- a/src/app/Components/pedidos/pedidos.page.html
+++ b/src/app/Components/pedidos/pedidos.page.html
@@ -11,7 +11,7 @@
    <div class="fixed">
        <ion-list>
          <ion-item *ngFor="let pedido of pedidos">
-          <ion-label [style.color]="pedido.estado.id==7 ? 'orange' : 'black' " [routerLink]="['/pedido/'+pedido.codpedido]">[{{pedido.codpedido}}] {{pedido.descripcion}}</ion-label>
+          <ion-label [style.color]="pedido.estado.id==7 ? 'orange' : 'black' " [routerLink]="['/pedido/'+pedido.codpedido]"> <strong>Nº{{pedido.codpedido}}</strong> {{pedido.descripcion}} <p style="float: right">{{pedido.codpedido}}€</p> </ion-label>
         </ion-item>
        </ion-list>
    </div>
