--- a/src/app/Components/inicio/inicio.page.html
+++ b/src/app/Components/inicio/inicio.page.html
@@ -15,7 +15,7 @@
       
         <ion-card-content>
           <ion-text color="warning">
-            <ion-button href="google.es"><h4 style="text-align: center
+            <ion-button [routerLink]="['/pedidos']" routerLinkActive="router-link-active"><h4 style="text-align: center
               ">Hay {{cont}} pedidos pendientes</h4></ion-button>
           </ion-text>
           <ion-text color="info">
